--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>明日方舟：终末地 抽卡模拟</title>
+    <title>明日方舟：终末地 寻访模拟</title>
   </head>
   <body>
     <div id="root"></div>
